# hello-lambda-rs

./: .gitignore  Cargo.toml  Makefile  README.md  template.yaml
src/: main.rs
src/hello/: mod.rs
