[package]
name = "rust-lambda-https"
version = "0.1.0"
authors = ["mitchgollub <mgollub@live.com>"]
edition = "2018"
autobins=false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
tokio = { version = "1.10.0", features = ["full"] }
surf = { version = "2.2.0", default-features = false, features = ["h1-client-rustls", "middleware-logger", "encoding"] }
futures = "0.3.15"
aws_lambda_events = "^0.5.0"
http = "0.2.4"
log = "0.4.14"
simple_logger = "1.11.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
